# poisson

./: .gitignore  README
example/square_avg_soln/: Makefile  dofs.tex  effectivity.tex  full_data.txt  in_full.yaml  in_long.yaml  in_single.yaml  long_data.txt  out_full_h000625.txt  out_full_h00125.txt  out_full_h0025.txt  out_full_h005.txt  out_full_h01.txt  out_full_h02.txt  out_long_h000625.txt  out_long_h00125.txt  out_long_h0025.txt  out_long_h005.txt  out_long_h01.txt  out_long_h02.txt  out_single_h000625.txt  out_single_h00125.txt  out_single_h0025.txt  out_single_h005.txt  out_single_h01.txt  out_single_h02.txt  single_data.txt  square.cpp
src/: CMakeLists.txt  goal_adjoint.cpp  goal_adjoint.hpp  goal_avg_grad.cpp  goal_avg_grad.hpp  goal_avg_soln.cpp  goal_avg_soln.hpp  goal_dbcs.cpp  goal_disc.cpp  goal_disc.hpp  goal_functional.cpp  goal_functional.hpp  goal_nested.cpp  goal_nested.hpp  goal_point_wise.cpp  goal_poisson.cpp  goal_poisson.hpp  goal_primal.cpp  goal_primal.hpp  goal_qoi.cpp  goal_residual.cpp  goal_residual.hpp  goal_soln.cpp  goal_soln.hpp  goal_soln_adjoint.cpp  goal_soln_adjoint.hpp  goal_weight.cpp  goal_weight.hpp  main_adjoint.cpp  main_primal.cpp
test/: CMakeLists.txt  disc.cpp  nested.cpp  poisson.yaml
